--- a/analysis/study2.qmd
+++ b/analysis/study2.qmd
@@ -128,7 +128,7 @@ df9 <- cbind(data$df9, scores$sample9)
 df10 <- cbind(data$df10, scores$sample10)
 df11 <- cbind(data$df11, scores$sample11)
 df12 <- cbind(data$df12, scores$sample12)
-df13 <- cbind(data$df13, scores$sample12)
+df13 <- cbind(data$df13, scores$sample13)
 df14 <- cbind(data$df14, scores$sample14)
 df15 <- cbind(data$df15, scores$sample15)
 
@@ -163,7 +163,7 @@ vars_intero <- names(select(scores$sample1a, -Sample))
 ```{r}
 #| warning: false
 
-pool_coef <- function(with = "Age", component = "Demographic", standardize="within") {
+pool_coef <- function(with = "Age", component = "Demographic", name = with, unequalrange=FALSE) {
   rez <- data.frame()
   for(intero in vars_intero) {
     data <- data.frame() 
@@ -173,14 +173,24 @@ pool_coef <- function(with = "Age", component = "Demographic", standardize="with
                      df12, df14, df15)) {
       if (with %in% names(dataset)) {
         d <- dataset[c(with, intero, "Sample")]
-        if(standardize == "within") d <- standardize(d)
         data <- rbind(data, d)
       }
     }
     
-    if(standardize == "between") {
-      data <- standardize(data[complete.cases(data), ])
+    
+    # Make sure that min-max of "with" is the equal across all samples
+    check <- summarize(data, 
+                       min = min(!!sym(with), na.rm = TRUE),  
+                       max = max(!!sym(with), na.rm = TRUE), .by = "Sample")
+    if (with != "Gender" && (any(check$min != min(check$min)) || any(check$max != max(check$max)))) {
+      if(unequalrange == FALSE) {
+        print(check)
+        stop(paste0("The range of '", with, "' is not equal across samples."))
+      }
     }
+    
+    
+    data <- standardize(data[complete.cases(data), ])
 
     if (with == "Gender") {
       data <- data[data$Gender != "Other",]
@@ -188,8 +198,8 @@ pool_coef <- function(with = "Age", component = "Demographic", standardize="with
       f <- as.formula(paste0(intero, "~", with, " + (", with, "|Sample)"))
       f2 <- as.formula(paste0(intero, "~", with, " + (1|Sample)"))
     } else {
-      f <- as.formula(paste0(with, "~", intero, " + (", intero, "|Sample)"))
-      f2 <- as.formula(paste0(with, "~", intero, " + (1|Sample)"))
+      f <- as.formula(paste0(intero, "~", with, " + (", with, "|Sample)"))
+      f2 <- as.formula(paste0(intero, "~", with, " + (1|Sample)"))
     }
     
     # if(length(unique(data$Sample)) == 1)
@@ -205,24 +215,17 @@ pool_coef <- function(with = "Age", component = "Demographic", standardize="with
     out$var_Interoception <- intero
     out$var_Correlate <- with
     out$Component <- component
-    out$Method <- standardize
     out$Type <- type
     out$Converged <- insight::is_converged(m)
+    out$N <- nrow(data)
     rez <- rbind(rez, out)
     
   }
+  rez$var_Correlate <- name
   rez
 }
 
-make_rez <- function(with = "Gender", component = "Demographic", name = with) {
-  d <- rbind(
-    pool_coef(with = with, component = component, standardize="within"),
-    pool_coef(with = with, component = component, standardize="between")) 
-  d$var_Correlate <- name
-  d
-}
-
-data <- make_rez(with = "Gender", component = "Demographic", name = "Gender (Female - Male)")
+data <- pool_coef(with = "Gender", component = "Demographic", name = "Gender (Female - Male)")
 ```
 
 ### Age
@@ -230,7 +233,7 @@ data <- make_rez(with = "Gender", component = "Demographic", name = "Gender (Fem
 ```{r}
 #| warning: false
 
-data <- rbind(data, make_rez(with = "Age", component = "Demographic"))
+data <- rbind(data, pool_coef(with = "Age", component = "Demographic", unequalrange=TRUE))
 ```
 
 ## Body
@@ -250,18 +253,15 @@ data <- rbind(data, make_rez(with = "Age", component = "Demographic"))
 
 data <- rbind(
   data,
-  make_rez(with = "MAIA_AttentionReg", component = "MAIA", name = "Attention Regulation"),
-  make_rez(with = "MAIA_BodyListening", component = "MAIA", name = "Listening"),
-  make_rez(with = "MAIA_BodyTrusting", component = "MAIA", name = "Trusting"),
-  make_rez(with = "MAIA_EmoAwareness", component = "MAIA", name = "Emotional Awareness"),
-  make_rez(with = "MAIA_NotDistracting", component = "MAIA", name = "Not Distracting"),
-  make_rez(with = "MAIA_Noticing", component = "MAIA", name = "Noticing"),
-  make_rez(with = "MAIA_NotWorrying", component = "MAIA", name = "Not Worrying"),
-  make_rez(with = "MAIA_SelfReg", component = "MAIA", name = "Self Regulation"),
-  make_rez(with = "MAIA_Trusting", component = "MAIA", name = "Trusting")
+  pool_coef(with = "MAIA_AttentionReg", component = "MAIA", name = "Attention Regulation", unequalrange=TRUE),
+  pool_coef(with = "MAIA_BodyListening", component = "MAIA", name = "Listening", unequalrange=TRUE),
+  pool_coef(with = "MAIA_Trusting", component = "MAIA", name = "Trusting", unequalrange=TRUE),
+  pool_coef(with = "MAIA_EmoAwareness", component = "MAIA", name = "Emotional Awareness", unequalrange=TRUE),
+  pool_coef(with = "MAIA_NotDistracting", component = "MAIA", name = "Not Distracting", unequalrange=TRUE),
+  pool_coef(with = "MAIA_Noticing", component = "MAIA", name = "Noticing", unequalrange=TRUE),
+  pool_coef(with = "MAIA_NotWorrying", component = "MAIA", name = "Not Worrying", unequalrange=TRUE),
+  pool_coef(with = "MAIA_SelfReg", component = "MAIA", name = "Self Regulation", unequalrange=TRUE)
 )
-
-
 ```
 
 ### ICQ
@@ -577,7 +577,6 @@ average_corr |>
 #| fig-width: 15
 
 p <- data |>
-  filter(Method == "within") |> 
   mutate(sig = ifelse(p < .01, "p < .01", ifelse(p < .001, "p < .001", "N.S.")),
          dir = sign(r),
          var_Interoception = str_replace(var_Interoception, "CoughSneeze", "Cough/Sneeze"),
@@ -593,9 +592,9 @@ p <- data |>
          #   "Schizotypic", "Autistic", "Personality", "Conspiracy Beliefs", "World Beliefs", "Lying Profile")) |>
   ggplot(aes(x = var_Correlate)) +
   geom_hline(yintercept = 0, linetype = "dashed") +
-  geom_point2(aes(y=r, color = dir, alpha = sig), size = 3) +
-  geom_linerange(aes(color = dir, alpha = sig, ymin = CI_low, ymax = CI_high), linewidth = 2) +
-  # geom_bar(aes(fill=Sample, alpha=sig, y=r, group=Sample), stat="identity", position = position_dodge2(width = 0.8)) +
+  # geom_point2(aes(y=r, color = dir, alpha = sig), size = 3) +
+  geom_linerange(aes(color=dir, alpha=sig, ymax=r, ymin=0), linewidth = 1) +
+  geom_linerange(aes(color = dir, alpha = sig, ymin = CI_low, ymax = CI_high, linewidth = log(N))) +
   # geom_linerange(aes(color=dir, alpha=sig, ymin=0, ymax=r, group=Sample), position = position_dodge2(width = 0.7), linewidth=2.5) +
   # geom_linerange(aes(ymin = CI_low, ymax = CI_high, color = dir, alpha=sig, group=Sample), position = position_dodge2(width = 0.7),
   #                linewidth = 1) +
@@ -604,7 +603,8 @@ p <- data |>
   scale_color_gradient(low = "#2196F3", high = "#FF5722", guide = "none") +
   scale_alpha_discrete(range = c(0.2, 0.9), guide = "none") +
   scale_y_continuous(expand = c(0, 0), breaks = c(-0.3, 0, 0.3)) +
-  coord_flip(ylim = c(-0.5, 0.5)) +
+  scale_linewidth_continuous(range = c(3, 7), guide = "none") +
+  coord_flip(ylim = c(-0.35, 0.35)) +
   theme_modern(axis.title.space = 5) +
   labs(y = "Strength of Association (std. Beta)") +
   theme(panel.grid.major.y = element_line(),
